@@ -5,6 +5,8 @@ LIST OF CHANGES
    checks
  - implementation of job generation for autoqc generic check
    for artic
+ - generation of the autoqc generic result for artic and the
+   review result is removed from the stage2pp job for artic
 
 release 57.17.0
  - a generic way to specify constructor options in the function
